FIX: [search] mobile input gets hidden by device keyboard

--- a/css/awesome-lahar.css
+++ b/css/awesome-lahar.css
@@ -56,7 +56,7 @@ button:focus {
 
 @media only screen and (max-width: 400px) {
     .search-form label {
-        margin-top: 60%;
+        margin-top: 10%;
     }
 }
 
